Fix spacing in dashboard stats section

--- a/src/components/Dashboard/Dashboard.scss
+++ b/src/components/Dashboard/Dashboard.scss
@@ -24,4 +24,24 @@
   width: 375px;
   height: 200px;
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+  box-sizing: border-box;
+  padding: 25px;
+  display: flex;
+  flex-direction: column;
+
+  h3 {
+    margin: 15px 0;
+  }
+
+  p {
+    font-size: 20px;
+    margin: 15px 0;
+  }
+}
+
+.region,
+.total-sightings,
+.monthly-sightings {
+  display: flex;
+  justify-content: space-between;
 }
